--- a/introduction.html
+++ b/introduction.html
@@ -239,7 +239,7 @@ Presented by Kaoru Nishikawa</li>
 </ul>
 </li>
 <li>ドキュメントを残す (例えば <a href="https://nanten2.github.io/neclib">neclib のドキュメント</a>)</li>
-<li>&lt;span style="color: #F00;"&gt;<strong>重要 : ここでいう「他者」には「数ヶ月後の自分」も含まれます</strong>&lt;/span&gt;</li>
+<li><span style="color: #F00;"><strong>重要 : ここでいう「他者」には「数ヶ月後の自分」も含まれます</strong></span></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-paginate="true" data-background-image="url('https://marp.app/assets/hero-background.jpg')" data-theme="gaia" data-marpit-pagination="18" data-marpit-pagination-total="20" style="--paginate:true;--background-image:url('https://marp.app/assets/hero-background.jpg');--theme:gaia;background-image:url('https://marp.app/assets/hero-background.jpg');background-position:center;background-repeat:no-repeat;background-size:cover;">
