deploy: 038c34c2dc408f38f002c10357ecf1de5a658b4a

--- a/introduction.html
+++ b/introduction.html
@@ -75,7 +75,7 @@ Presented by Kaoru Nishikawa</li>
 <ul>
 <li>高水準の汎用スクリプト言語</li>
 <li>シンプルで習得しやすい文法とデータ構造</li>
-<li>豊富な標準ライプラリ (battery included)</li>
+<li>豊富な標準ライブラリ (battery included)</li>
 <li>科学用途の豊富な外部ライブラリ</li>
 </ul>
 </li>
