--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="noindex">
-    <title>Python Tutorials #1</title>
+    <title>Python Tutorials</title>
 </head>
 
 <body>
-    <div style="display: flex; flex-direction: column;">
-        <a href="./introduction.html">Introduction</a>
-        <a href="./environment.html">Environment</a>
-    </div>
+    <div id="main" class="markdown-body" style="margin: 5%;"></div>
+    <script src="https://cdn.jsdelivr.net/npm/marked@4.0.14/lib/marked.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.3.6/dist/purify.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@3.0.1/github-markdown.min.css">
+    <script>
+        const main = document.getElementById('main');
+        const markdown = fetch("https://raw.githubusercontent.com/KaoruNishikawa/PythonTutorials/main/README.md")
+            .then(response => response.text())
+            .then(text => {
+                const parsed = marked.parse(text)
+                main.innerHTML = DOMPurify.sanitize(parsed);
+            });
+    </script>
 </body>
 
 </html>
